Python constraints, good in 2.46 not working anymore in 2.47 #17599

Closed
opened 2008-09-11 00:56:58 +02:00 by Jorge Rocha · 8 comments

Resolution: Fixed
Category: Animation system

%%%2.46 was the first version to ever include pyconstraints and always worked for me. In 2.47 they work in Blender's 3D view, but are ignored at rendering time, or simply do not work at all.

Attached image 1: Image showing how it did work under 2.46

Attached image 2: Blender 2.47

Attached file contains armature from my example. The constrained bones copy the Y axis of their targets but not X or Z rotations.

Load in 2.46 (only 2.46), everything works fine. Load in 2.47, all bones which should be constrained are in their rest positions. The console reports no errors.%%%

**Resolution**: Fixed **Category**: Animation system %%%2.46 was the first version to ever include pyconstraints and always worked for me. In 2.47 they work in Blender's 3D view, but are ignored at rendering time, or simply do not work at all. Attached image 1: Image showing how it did work under 2.46 Attached image 2: Blender 2.47 Attached file contains armature from my example. The constrained bones copy the Y axis of their targets but not X or Z rotations. Load in 2.46 (only 2.46), everything works fine. Load in 2.47, all bones which should be constrained are in their rest positions. The console reports no errors.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.
Member

%%%Make sure that you've got scriptlinks enabled. Starting from 2.47, all places where pyscripts could be automatically run will only do so if scriptlinks are enabled (for security when running unknown files).%%%

%%%Make sure that you've got scriptlinks enabled. Starting from 2.47, all places where pyscripts could be automatically run will only do so if scriptlinks are enabled (for security when running unknown files).%%%
Author

%%%Sorry to bother you again.

Thank you for telling me about the scriptlink part. That fixes the problem in the 3d view, but unless I am missing another option that has to be enabled besides scriptlinks, script constrained bones are still reset to their rest positions at the time of rendering in 2.47.
%%%

%%%Sorry to bother you again. Thank you for telling me about the scriptlink part. That fixes the problem in the 3d view, but unless I am missing another option that has to be enabled besides scriptlinks, script constrained bones are still reset to their rest positions at the time of rendering in 2.47. %%%
Member

%%%Reopening report. Confirmed error when/after rendering.

I've tracked the error down to two places:

  1. renderwin.c - BIF_do_render() has
    G.f &= ~G_DOSCRIPTLINKS;
    which is apparently used to "avoid FRAMECHANGED slink in render callback"... however, this doesn't take into account that many rig elements also rely on this now

  2. sceneRender.c (pyapi) same story here...

Assigning this py-related issue to Campbell to solve.%%%

%%%Reopening report. Confirmed error when/after rendering. I've tracked the error down to two places: 1) renderwin.c - BIF_do_render() has G.f &= ~G_DOSCRIPTLINKS; which is apparently used to "avoid FRAMECHANGED slink in render callback"... however, this doesn't take into account that many rig elements also rely on this now 2) sceneRender.c (pyapi) same story here... Assigning this py-related issue to Campbell to solve.%%%
Member

%%%re-assigning to willian!%%%

%%%re-assigning to willian!%%%

%%%Hi,

Improved that old hack, please test again and if you still find problems, report.

PS: now REDRAW scriptlinks also get executed during one frame renders, but that's how it used to be long ago and conforms to what happens during animations (both FRAMECHANGED and REDRAW are executed per frame). Easy to avoid, if needed, of course.

--
Willian%%%

%%%Hi, Improved that old hack, please test again and if you still find problems, report. PS: now REDRAW scriptlinks also get executed during one frame renders, but that's how it used to be long ago and conforms to what happens during animations (both FRAMECHANGED and REDRAW are executed per frame). Easy to avoid, if needed, of course. -- Willian%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#17599
No description provided.