source/blender/python/BPY_extern.h
@@ -100,7 +100,7 @@ extern "C" {
 
 	void BPY_clear_bad_scriptlinks( struct Text *byebye );
 	int BPY_has_onload_script( void );
-	void BPY_do_all_scripts( short event );
+	void BPY_do_all_scripts( short event, short anim );
 	int BPY_check_all_scriptlinks( struct Text *text );
 	void BPY_do_pyscript( struct ID *id, short event );
 	void BPY_free_scriptlink( struct ScriptLink *slink );
